Correction de l'alignement en responsive mobile

--- a/style.css
+++ b/style.css
@@ -579,6 +579,7 @@ footer div {
     main #hebergements {
         margin-bottom: 0px;
         margin-top: -20px;
+        margin-left: -10px;
         padding-top: 0px;
         flex-direction: column;
         justify-content: center;
@@ -663,7 +664,7 @@ footer div {
     }
 
     aside #most-popular-host .popular-host {
-        width: 85%;
+        width: 87%;
         margin-left: 7px;
         margin-bottom: 10px;
         padding-bottom: 5px;
